WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176059
CacheStorage does not need to sort its caches
https://bugs.webkit.org/show_bug.cgi?id=176059
Summary
CacheStorage does not need to sort its caches
youenn fablet
Reported
2017-08-29 11:17:14 PDT
They are already sorted by the backend
Attachments
Patch
(1.50 KB, patch)
2017-08-29 11:18 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-08-29 11:18:56 PDT
Created
attachment 319264
[details]
Patch
Chris Dumez
Comment 2
2017-08-29 15:03:08 PDT
Comment on
attachment 319264
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2017-08-29 15:34:20 PDT
Comment on
attachment 319264
[details]
Patch Clearing flags on attachment: 319264 Committed
r221318
: <
http://trac.webkit.org/changeset/221318
>
WebKit Commit Bot
Comment 4
2017-08-29 15:34:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-08-29 15:35:12 PDT
<
rdar://problem/34144559
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug