CacheStorage does not need to sort its caches https://bugs.webkit.org/show_bug.cgi?id=176059

Patch by Youenn Fablet <youenn@apple.com> on 2017-08-29
Reviewed by Chris Dumez.

Covered by existing tests.

* Modules/cache/CacheStorage.cpp:
(WebCore::CacheStorage::retrieveCaches):

Canonical link: https://commits.webkit.org/192745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221318 268f45cc-cd09-0410-ab3c-d52691b4dbfc